plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com.capstoneecho'
version = '0.0.1-SNAPSHOT'
description = 'ECHO_back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testAndDevelopmentOnly 'com.h2database:h2' // 로컬 테스트 기본 datasource
    // CI 전용: GitHub Actions 의 SPRING_PROFILES_ACTIVE=test,ci 환경에서만 활성화된다.
    // 로컬 ./gradlew test 는 application-test.yaml 의 H2 설정을 그대로 사용한다.
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-mysql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// ---- JaCoCo coverage gate ------------------------------------------------
//
// Java 25 class files (major 69) require JaCoCo 0.8.13+. Gradle 9.4.x ships
// an older default tool version, so pin explicitly.
jacoco {
    toolVersion = "0.8.13"
}

// Exclusions: Lombok-generated boilerplate (DTOs / JPA entities), Spring
// configuration glue, the application bootstrap class, and external HTTP
// adapters whose covered paths require live third-party endpoints. These
// carry few instructions of real logic — coverage on them is noise, not signal.
def jacocoExcludePatterns = [
        '**/EchoBackApplication.*',
        '**/dto/**',
        '**/entity/**',
        '**/global/config/**',
        '**/external/llm/GeminiLlmClient*',
        '**/external/llm/LlmJsonSchemas*',
        '**/external/modelserver/ModelServerClient*',
        '**/external/modelserver/HttpClientConfig*',
]

tasks.named('jacocoTestReport') {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
    }
}

// `classDirectories` resolution needs the source sets to be fully wired, so
// apply exclusions in a project-level afterEvaluate hook rather than inline
// inside each task configuration block (Task has no afterEvaluate).
project.afterEvaluate {
    [jacocoTestReport, jacocoTestCoverageVerification].each { jt ->
        jt.classDirectories.setFrom(
                files(jt.classDirectories.files.collect {
                    fileTree(dir: it, exclude: jacocoExcludePatterns)
                })
        )
    }
}

tasks.named('check') {
    dependsOn jacocoTestCoverageVerification
}

// ---- LLM CLI (Gemini 시험) ------------------------------------------------
// Spring 컨텍스트 없이 LlmFeedbackRunner 만 실행한다. .env.local 의 GEMINI_API_KEY 를 자동 인식.
tasks.register('runLlmFeedback', JavaExec) {
    group = 'application'
    description = 'CLI 로 Gemini generateContent 호출. --args 로 --prompt 또는 retry 모드를 전달한다.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.capstoneecho.echo_back.external.llm.LlmFeedbackRunner'
}

// ---- REST Docs → Asciidoctor → single HTML --------------------------------
tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
    attributes 'snippets': snippetsDir,
            'source-highlighter': 'highlightjs',
            'toc': 'left',
            'toclevels': '3',
            'sectlinks': '',
            'sectnums': ''
}
